// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders a disabled icon button 1`] = `
<button
  aria-label="UserIcon"
  class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-148 iconButtonStyles-medium-154 iconButtonStyles-contained-149 Mui-disabled Mui-disabled"
  disabled=""
  tabindex="-1"
  type="button"
>
  <span
    class="MuiIconButton-label"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
      />
    </svg>
  </span>
</button>
`;

exports[`Button component renders a flat button on dark background 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root buttonStyles-root-53 MuiButton-text buttonStyles-text-55 buttonStyles-textDarkBg-66 MuiButton-textPrimary"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label buttonStyles-label-57"
  >
    Caption
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`Button component renders a small icon button 1`] = `
<button
  aria-label="UserIcon"
  class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-122 iconButtonStyles-small-127 iconButtonStyles-contained-123"
  tabindex="0"
  type="button"
>
  <span
    class="MuiIconButton-label"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
      />
    </svg>
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`Button component renders an icon button 1`] = `
<button
  aria-label="User"
  class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-96 iconButtonStyles-medium-102 iconButtonStyles-contained-97"
  tabindex="0"
  type="button"
>
  <span
    class="MuiIconButton-label"
  >
    Caption
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`Button component renders an outlined button on dark background 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root buttonStyles-root-27 MuiButton-outlined buttonStyles-outlinedDarkBg-41 MuiButton-outlinedPrimary"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label buttonStyles-label-31"
  >
    Caption
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`Button component renders correctly 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-contained buttonStyles-contained-4 MuiButton-containedPrimary"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label buttonStyles-label-5"
  >
    Caption
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;
